// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Default renders correctly 1`] = `
<jest>
  <select
    aria-label="country"
    class="ecl-select"
    data-ecl-auto-init="Select"
    id="select-default"
    name="country"
  >
    <optgroup
      label="European countries"
    >
      <option
        value="1"
      >
        Belgium
      </option>
      <option
        value="2"
      >
        France
      </option>
      <option
        disabled=""
        value="3"
      >
        Luxembourg
      </option>
      <option
        value="4"
      >
        Germany
      </option>
      <option
        selected=""
        value="5"
      >
        Bulgaria
      </option>
      <option
        value="6"
      >
        Italy
      </option>
      <option
        value="7"
      >
        Romania
      </option>
      <option
        value="8"
      >
        Greece
      </option>
      <option
        value="9"
      >
        Hungary
      </option>
      <option
        value="10"
      >
        Portugal
      </option>
    </optgroup>
    <optgroup
      label="Non European countries"
    >
      <option
        value="11"
      >
        China
      </option>
    </optgroup>
    <option
      value="12"
    >
      standalone option
    </option>
  </select>
  <div
    class="ecl-select__icon"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-button--icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Toggle dropdown
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
  </div>
</jest>
`;

exports[`Select Default renders correctly with extra attributes 1`] = `
<jest>
  <select
    aria-label="country"
    class="ecl-select"
    data-ecl-auto-init="Select"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="select-default"
    name="country"
    required=""
  >
    <optgroup
      label="European countries"
    >
      <option
        value="1"
      >
        Belgium
      </option>
      <option
        value="2"
      >
        France
      </option>
      <option
        disabled=""
        value="3"
      >
        Luxembourg
      </option>
      <option
        value="4"
      >
        Germany
      </option>
      <option
        selected=""
        value="5"
      >
        Bulgaria
      </option>
      <option
        value="6"
      >
        Italy
      </option>
      <option
        value="7"
      >
        Romania
      </option>
      <option
        value="8"
      >
        Greece
      </option>
      <option
        value="9"
      >
        Hungary
      </option>
      <option
        value="10"
      >
        Portugal
      </option>
    </optgroup>
    <optgroup
      label="Non European countries"
    >
      <option
        value="11"
      >
        China
      </option>
    </optgroup>
    <option
      value="12"
    >
      standalone option
    </option>
  </select>
  <div
    class="ecl-select__icon"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-button--icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Toggle dropdown
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
  </div>
</jest>
`;

exports[`Select Default renders correctly with extra class names 1`] = `
<jest>
  <select
    aria-label="country"
    class="ecl-select custom-class custom-class--test"
    data-ecl-auto-init="Select"
    id="select-default"
    name="country"
    required=""
  >
    <optgroup
      label="European countries"
    >
      <option
        value="1"
      >
        Belgium
      </option>
      <option
        value="2"
      >
        France
      </option>
      <option
        disabled=""
        value="3"
      >
        Luxembourg
      </option>
      <option
        value="4"
      >
        Germany
      </option>
      <option
        selected=""
        value="5"
      >
        Bulgaria
      </option>
      <option
        value="6"
      >
        Italy
      </option>
      <option
        value="7"
      >
        Romania
      </option>
      <option
        value="8"
      >
        Greece
      </option>
      <option
        value="9"
      >
        Hungary
      </option>
      <option
        value="10"
      >
        Portugal
      </option>
    </optgroup>
    <optgroup
      label="Non European countries"
    >
      <option
        value="11"
      >
        China
      </option>
    </optgroup>
    <option
      value="12"
    >
      standalone option
    </option>
  </select>
  <div
    class="ecl-select__icon"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-button--icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Toggle dropdown
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
  </div>
</jest>
`;

exports[`Select Disabled renders correctly 1`] = `
<jest>
  <select
    aria-label="country"
    class="ecl-select"
    data-ecl-auto-init="Select"
    disabled=""
    id="select-default"
    name="country"
  >
    <optgroup
      label="European countries"
    >
      <option
        value="1"
      >
        Belgium
      </option>
      <option
        value="2"
      >
        France
      </option>
      <option
        disabled=""
        value="3"
      >
        Luxembourg
      </option>
      <option
        value="4"
      >
        Germany
      </option>
      <option
        selected=""
        value="5"
      >
        Bulgaria
      </option>
      <option
        value="6"
      >
        Italy
      </option>
      <option
        value="7"
      >
        Romania
      </option>
      <option
        value="8"
      >
        Greece
      </option>
      <option
        value="9"
      >
        Hungary
      </option>
      <option
        value="10"
      >
        Portugal
      </option>
    </optgroup>
    <optgroup
      label="Non European countries"
    >
      <option
        value="11"
      >
        China
      </option>
    </optgroup>
    <option
      value="12"
    >
      standalone option
    </option>
  </select>
  <div
    class="ecl-select__icon"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-button--icon-only"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Toggle dropdown
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
  </div>
</jest>
`;

exports[`Select Multiple renders correctly 1`] = `
<jest>
  <select
    aria-label="country"
    class="ecl-select"
    data-ecl-auto-init="Select"
    data-ecl-select-all="Select all"
    data-ecl-select-clear-all="Clear all"
    data-ecl-select-close="Apply"
    data-ecl-select-default="Choose options"
    data-ecl-select-multiple=""
    data-ecl-select-no-results="No results found"
    data-ecl-select-search="Enter keyword"
    id="select-multiple"
    multiple=""
    name="country"
    required=""
  >
    <optgroup
      label="European countries"
    >
      <option
        value="1"
      >
        Belgium
      </option>
      <option
        value="2"
      >
        France
      </option>
      <option
        disabled=""
        value="3"
      >
        Luxembourg
      </option>
      <option
        value="4"
      >
        Germany
      </option>
      <option
        value="5"
      >
        Bulgaria
      </option>
      <option
        value="6"
      >
        Italy
      </option>
      <option
        value="7"
      >
        Romania
      </option>
      <option
        value="8"
      >
        Greece
      </option>
      <option
        value="9"
      >
        Hungary
      </option>
      <option
        value="10"
      >
        Portugal
      </option>
    </optgroup>
    <optgroup
      label="Non European countries"
    >
      <option
        value="11"
      >
        China
      </option>
    </optgroup>
    <option
      value="12"
    >
      standalone option
    </option>
  </select>
  <div
    class="ecl-select__icon"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-button--icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Toggle dropdown
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
  </div>
</jest>
`;

exports[`Select Required renders correctly 1`] = `
<jest>
  <select
    aria-label="country"
    class="ecl-select"
    data-ecl-auto-init="Select"
    id="select-default"
    name="country"
    required=""
  >
    <optgroup
      label="European countries"
    >
      <option
        value="1"
      >
        Belgium
      </option>
      <option
        value="2"
      >
        France
      </option>
      <option
        disabled=""
        value="3"
      >
        Luxembourg
      </option>
      <option
        value="4"
      >
        Germany
      </option>
      <option
        selected=""
        value="5"
      >
        Bulgaria
      </option>
      <option
        value="6"
      >
        Italy
      </option>
      <option
        value="7"
      >
        Romania
      </option>
      <option
        value="8"
      >
        Greece
      </option>
      <option
        value="9"
      >
        Hungary
      </option>
      <option
        value="10"
      >
        Portugal
      </option>
    </optgroup>
    <optgroup
      label="Non European countries"
    >
      <option
        value="11"
      >
        China
      </option>
    </optgroup>
    <option
      value="12"
    >
      standalone option
    </option>
  </select>
  <div
    class="ecl-select__icon"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-button--icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Toggle dropdown
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
  </div>
</jest>
`;

exports[`Select With error renders correctly 1`] = `
<jest>
  <select
    aria-label="country"
    class="ecl-select"
    data-ecl-auto-init="Select"
    id="select-default"
    name="country"
  >
    <optgroup
      label="European countries"
    >
      <option
        value="1"
      >
        Belgium
      </option>
      <option
        value="2"
      >
        France
      </option>
      <option
        disabled=""
        value="3"
      >
        Luxembourg
      </option>
      <option
        value="4"
      >
        Germany
      </option>
      <option
        selected=""
        value="5"
      >
        Bulgaria
      </option>
      <option
        value="6"
      >
        Italy
      </option>
      <option
        value="7"
      >
        Romania
      </option>
      <option
        value="8"
      >
        Greece
      </option>
      <option
        value="9"
      >
        Hungary
      </option>
      <option
        value="10"
      >
        Portugal
      </option>
    </optgroup>
    <optgroup
      label="Non European countries"
    >
      <option
        value="11"
      >
        China
      </option>
    </optgroup>
    <option
      value="12"
    >
      standalone option
    </option>
  </select>
  <div
    class="ecl-select__icon"
  >
    <button
      class="ecl-button ecl-button--ghost ecl-button--icon-only"
      tabindex="-1"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Toggle dropdown
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </span>
    </button>
  </div>
</jest>
`;
